<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>com.ctseducare</groupId>
  <artifactId>jsp-template-sistema</artifactId>
  <version>1.0.0</version>
  
  <packaging>war</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <failOnMissingWebXml>true</failOnMissingWebXml>
  </properties>

  <dependencies>
    <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>4.0.1</version>  <!-- apr/2018 -->
      <scope>provided</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.8.6</version>  <!-- oct/2019 -->
      <scope>compile</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>8.0.23</version>  <!-- jan/2021 -->
      <scope>compile</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>5.4.29.Final</version>  <!-- mar/2021 -->
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-c3p0</artifactId>
      <version>5.4.29.Final</version>  <!-- mar/2021 -->
      <scope>compile</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
      <version>2.14.1</version>  <!-- mar/2021 -->
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>2.14.1</version>  <!-- mar/2021 -->
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId> 
      <version>2.14.1</version>  <!-- mar/2021 -->
      <scope>compile</scope>
    </dependency>
    <!-- Extras -->
    <dependency>
      <groupId>com.ctseducare</groupId>
      <artifactId>CTSLibraryJ</artifactId>
      <version>1.0.0</version>
      <scope>system</scope>
      <systemPath>${pom.basedir}/libs/CTSLibraryJ-1.0.0.jar</systemPath>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- MAVEN COMPILER (responsible for compile the sources of project)  -->
      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>  <!-- may/2019 -->
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
      <!-- MAVEN WAR (responsible for collecting all artifact dependencies, classes and resources of the web application and packaging them into a web application archive) -->
      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-war-plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.3.1</version>  <!-- jul/2020 -->
        <configuration>
          <webXml>WebContent/WEB-INF/web.xml</webXml>
          <warName>${project.artifactId}-${project.version}</warName>
          <warSourceDirectory>WebContent</warSourceDirectory>
        </configuration>
      </plugin>
      <!-- MAVEN SUREFIRE (designed to run unit tests) -->
      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>  <!-- may/2019 -->
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
        </configuration>
      </plugin>
      <!-- MAVEN FAILSAFE (designed to run integration tests) -->
      <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-failsafe-plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.2</version>  <!-- may/2019 -->
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
        </configuration>
      </plugin>      
    </plugins>
  </build>

</project>